--- a/FreeFlix/manifest.json
+++ b/FreeFlix/manifest.json
@@ -2,19 +2,19 @@
   "name": "FreeFlixx - Stream Movies & TV Shows For Free",
   "short_name": "FreeFlixx",
   "description": "Stream Your Favorite Movies And TV Shows For Free on FreeFlixx",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "any",
   "icons": [
     {
-      "src": "/assets/freeflixx.png",
+      "src": "./assets/freeflixx.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/freeflixx.png",
+      "src": "./assets/freeflixx.png",
       "sizes": "512x512",
       "type": "image/png"
     }
