--- a/FreeFlix/vercel.json
+++ b/FreeFlix/vercel.json
@@ -42,7 +42,7 @@
       ]
     },
     {
-      "source": "/*.js",
+      "source": "/:path*.js",
       "headers": [
         {
           "key": "Cache-Control",
@@ -51,7 +51,7 @@
       ]
     },
     {
-      "source": "/*.css",
+      "source": "/:path*.css",
       "headers": [
         {
           "key": "Cache-Control",
@@ -59,5 +59,6 @@
         }
       ]
     }
-  ]
+  ],
+  "outputDirectory": "dist"
 }
