--- a/FreeFlix/vercel.json
+++ b/FreeFlix/vercel.json
@@ -3,7 +3,13 @@
     { "source": "/movies", "destination": "/movies/" },
     { "source": "/tvshows", "destination": "/tvshows/" },
     { "source": "/anime", "destination": "/anime/" },
-    { "source": "/watchList", "destination": "/watchList/" }
+    { "source": "/watchList", "destination": "/watchList/" },
+    { "source": "/sitemap.xml", "destination": "/sitemap.xml" },
+    { "source": "/sitemap-index.xml", "destination": "/sitemap-index.xml" },
+    { "source": "/movies-sitemap.xml", "destination": "/movies-sitemap.xml" },
+    { "source": "/tvshows-sitemap.xml", "destination": "/tvshows-sitemap.xml" },
+    { "source": "/anime-sitemap.xml", "destination": "/anime-sitemap.xml" },
+    { "source": "/robots.txt", "destination": "/robots.txt" }
   ],
   "redirects": [
     { "source": "/index.php", "destination": "/", "permanent": true },
@@ -29,6 +35,10 @@
         {
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "X-Robots-Tag",
+          "value": "index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
         }
       ]
     },
@@ -56,6 +66,58 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    },
+    {
+      "source": "/sitemap-index.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    },
+    {
+      "source": "/*-sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    },
+    {
+      "source": "/robots.txt",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/plain"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
         }
       ]
     }
