--- a/FreeFlix/vercel.json
+++ b/FreeFlix/vercel.json
@@ -3,151 +3,12 @@
   "buildCommand": "echo 'Static site, no build step needed'",
   "outputDirectory": ".",
   "rewrites": [
-    { "source": "/movies", "destination": "/movies/" },
-    { "source": "/tvshows", "destination": "/tvshows/" },
-    { "source": "/anime", "destination": "/anime/" },
-    { "source": "/watchList", "destination": "/watchList/" },
-    { "source": "/sitemap.xml", "destination": "/sitemap.xml" },
-    { "source": "/sitemap-index.xml", "destination": "/sitemap-index.xml" },
-    { "source": "/movies-sitemap.xml", "destination": "/movies-sitemap.xml" },
-    { "source": "/tvshows-sitemap.xml", "destination": "/tvshows-sitemap.xml" },
-    { "source": "/anime-sitemap.xml", "destination": "/anime-sitemap.xml" },
-    { "source": "/robots.txt", "destination": "/robots.txt" }
-  ],
-  "redirects": [
-    { "source": "/index.php", "destination": "/", "permanent": true },
-    { "source": "/home", "destination": "/", "permanent": true },
-    { "source": "/browse", "destination": "/", "permanent": true }
-  ],
-  "routes": [
-    { "src": "/index.html", "dest": "/index.html" },
-    { "src": "/", "dest": "/index.html" },
-    { "src": "/movies", "dest": "/movies/index.html" },
-    { "src": "/movies/", "dest": "/movies/index.html" },
-    { "src": "/tvshows", "dest": "/tvshows/index.html" },
-    { "src": "/tvshows/", "dest": "/tvshows/index.html" },
-    { "src": "/anime", "dest": "/anime/index.html" },
-    { "src": "/anime/", "dest": "/anime/index.html" },
-    { "src": "/movie_details", "dest": "/movie_details/movie_details.html" },
-    { "src": "/movie_details/", "dest": "/movie_details/movie_details.html" },
-    { "src": "/watchList", "dest": "/watchList/watchlist.html" },
-    { "src": "/watchList/", "dest": "/watchList/watchlist.html" },
-    { "src": "/404.html", "dest": "/404.html" },
-    { "src": "/:path*", "status": 404, "dest": "/404.html" }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        },
-        {
-          "key": "X-Robots-Tag",
-          "value": "index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
-        }
-      ]
-    },
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/assests/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/:path*.js",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/:path*.css",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/sitemap.xml",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/xml"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400"
-        }
-      ]
-    },
-    {
-      "source": "/sitemap-index.xml",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/xml"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400"
-        }
-      ]
-    },
-    {
-      "source": "/*-sitemap.xml",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/xml"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400"
-        }
-      ]
-    },
-    {
-      "source": "/robots.txt",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/plain"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400"
-        }
-      ]
-    }
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/movies", "destination": "/movies/index.html" },
+    { "source": "/tvshows", "destination": "/tvshows/index.html" },
+    { "source": "/anime", "destination": "/anime/index.html" },
+    { "source": "/movie_details", "destination": "/movie_details/movie_details.html" },
+    { "source": "/watchList", "destination": "/watchList/watchlist.html" },
+    { "source": "/(.*)", "destination": "/$1" }
   ]
 }
